Styles: Fix missing margin, wrong font-weight

--- a/src/styles/_governance.less
+++ b/src/styles/_governance.less
@@ -86,12 +86,13 @@
           font-size: 16px;
           line-height: 24px;
           color: #d72c33;
-          @font-bold();
+          margin-top: 24px;
+          @font-medium();
         }
 
         &.error {
           span.error-message {
-            display: inline;
+            display: inline-block;
           }
         }
 
